consumer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-consumer
spec:
  selector:
    matchLabels:
      app: task-consumer
  template:
    metadata:
      labels:
        app: task-consumer
    spec:
      containers:
      - name: task-consumer
        image: rgan19/task-consumer:1.0.0
        resources:
          limits: 
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: task-consumer
  annotations:
    konghq.com/plugins: twelve-per-min
spec:
  type: NodePort
  selector:
    app: task-consumer
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 31289
