producer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-producer
spec:
  selector:
    matchLabels:
      app: task-producer
  template:
    metadata:
      labels:
        app: task-producer
    spec:
      containers:
      - name: task-producer
        image: rgan19/task-producer:1.1.0
        resources:
          limits: 
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: task-producer
  annotations:
    konghq.com/plugins: twelve-per-min
spec:
  type: NodePort
  selector:
    app: task-producer
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 31500
